corrijo errores de etiqueta <li>

--- a/public/autogestion.html
+++ b/public/autogestion.html
@@ -24,7 +24,7 @@
 <body>
         <header class="header">
      
-            <a href="insumos.html">
+            <a href="index.html">
                 <img alt="logo Encryptados" src="./assets/images/logo.png" class="logo">
               </a>
     
@@ -42,9 +42,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./auditorias.html">Auditorías</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./insumos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="./servicios.html">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./insumos.html">Insumos</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                     <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="./login.html">Admin</a></li>
