--- a/public/carrito.html
+++ b/public/carrito.html
@@ -21,7 +21,7 @@
 <body>
 
     <header class="header">
-        <a href="insumos.html">
+        <a href="index.html">
             <img alt="logo Encryptados" src="./assets/images/logo.png" class="logo" />
         </a>
         <div class="titulos">
@@ -46,9 +46,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                    </li>
-
+                        <a class="nav-link active" aria-current="page" href="index.html">
+                            Inicio
+                        </a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -72,7 +72,9 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="./login.html" id="admin">Admin</a>
+                        <a class="nav-link" href="./login.html" id="admin">
+                            Admin
+                        </a>
                     </li>
                 </ul>
                 <form class="d-flex">
