--- a/public/comprar.html
+++ b/public/comprar.html
@@ -19,7 +19,7 @@
 <body>
         <header class="header">
      
-            <a href="insumos.html">
+            <a href="index.html">
                 <img alt="logo Encryptados" src="./assets/images/logo.png" class="logo">
               </a>
     
@@ -36,29 +36,20 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html">
+                  Inicio
+                </a>
+              </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="./auditorias.html" id="auditorias">
-                  Auditorías
+                <a class="nav-link dropdown-toggle" href="./insumos.html">
+                  Productos
                 </a>
               </li>
 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="./servicios.html">
                   Servicios
-                </a>
-              </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="./capacitaciones.html">
-                  Capacitaciones
-                </a>
-              </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="./insumos.html" id="insumos">
-                  Insumos
                 </a>
               </li>
 
@@ -75,7 +66,9 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link" href="./login.html" id="admin">Admin</a>
+                <a class="nav-link" href="./login.html" id="admin">
+                  Admin
+                </a>
               </li>
   
             </ul>
