--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
     <link rel="stylesheet" href="./assets/css/fuentes.css">
     <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/styles2.css">
-    <link rel="stylesheet" href="./assets//css/insumos.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
+<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -85,9 +85,21 @@
     </nav>
 
     <main>
-   
-    </main>
-
+    <div class="container">
+        <div class="outerBox">
+            <div class="box">
+                <span style="--i: 1;"><img src="./assets/images/img1.png" alt=""></span>
+                <span style="--i: 2;"><img src="./assets/images/img9.png" alt=""></span>
+                <span style="--i: 3;"><img src="./assets/images/img3.png" alt=""></span>
+                <span style="--i: 4;"><img src="./assets/images/img4.png" alt=""></span>
+                <span style="--i: 5;"><img src="./assets/images/img10.png" alt=""></span>
+                <span style="--i: 6;"><img src="./assets/images/img11.png" alt=""></span>
+                <span style="--i: 7;"><img src="./assets/images/img12.png" alt=""></span>
+                <span style="--i: 8;"><img src="./assets/images/img8.png" alt=""></span>
+            </div>
+        </div>
+    </div>
+        </main>
     <footer>
         <div class="footlist">
             <a class="footlink fab fa-brands fa-youtube fa-2x" href="https://youtube.com" title="YouTube"
@@ -104,5 +116,6 @@
         </p>
     </footer>
     <script src="./assets/js/busqueda.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
