Agregué crud de Detalle_compra y ordenes_compra

--- a/public/gestionProductos.html
+++ b/public/gestionProductos.html
@@ -84,7 +84,9 @@
             </div>
         </div>
     </nav>
-
+<div class="titulo-crud">
+    <h2>Gestión de productos</h2>
+</div>
    <main>
   <section class="contenedor">
     <div class="bg-black bg-opacity-75 text-black p-5">
