Crud terminado para productos

--- a/public/comprar.html
+++ b/public/comprar.html
@@ -88,7 +88,7 @@
               <h2 class="sr-only">Formulario de datos del cliente</h2>
 
                 <!-- Cambia la acción por el endpoint de Formspree -->
-                <form id="formulario" action="https://formspree.io/f/meoqebwy" method="POST">
+                <form id="formulario" action="https://formspree.io/cambiar_direccion" method="POST">
                     <div class="form-floating mb-3">
                         <input name="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre" required>
                     </div>
