--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,11 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="./gestionProductos.html">
+                            crud-productos
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
                         <a class="nav-link" href="./login.html" id="admin">
                             Admin
                         </a>
