Transformé a Grid-Layout el display de index.html y puse un condicional a la siembra de datos en la BD

--- a/public/index.html
+++ b/public/index.html
@@ -91,22 +91,22 @@
         </div>
     </nav>
 
-    <main>
-    <div class="container">
-        <div class="outerBox">
-            <div class="box">
-                <span style="--i: 1;"><img src="./assets/images/img1.png" alt=""></span>
-                <span style="--i: 2;"><img src="./assets/images/img9.png" alt=""></span>
-                <span style="--i: 3;"><img src="./assets/images/img3.png" alt=""></span>
-                <span style="--i: 4;"><img src="./assets/images/img4.png" alt=""></span>
-                <span style="--i: 5;"><img src="./assets/images/img10.png" alt=""></span>
-                <span style="--i: 6;"><img src="./assets/images/img11.png" alt=""></span>
-                <span style="--i: 7;"><img src="./assets/images/img12.png" alt=""></span>
-                <span style="--i: 8;"><img src="./assets/images/img8.png" alt=""></span>
-            </div>
-        </div>
+  <main class="container">
+  <!-- Aseguramos que esté en la zona central del grid -->
+  <div class="outerBox" style="grid-area: main;">
+    <div class="box">
+      <span style="--i: 1;"><img src="./assets/images/img1.png" alt=""></span>
+      <span style="--i: 2;"><img src="./assets/images/img9.png" alt=""></span>
+      <span style="--i: 3;"><img src="./assets/images/img3.png" alt=""></span>
+      <span style="--i: 4;"><img src="./assets/images/img4.png" alt=""></span>
+      <span style="--i: 5;"><img src="./assets/images/img10.png" alt=""></span>
+      <span style="--i: 6;"><img src="./assets/images/img11.png" alt=""></span>
+      <span style="--i: 7;"><img src="./assets/images/img12.png" alt=""></span>
+      <span style="--i: 8;"><img src="./assets/images/img8.png" alt=""></span>
     </div>
-        </main>
+  </div>
+</main>
+
     <footer>
         <div class="footlist">
             <a class="footlink fab fa-brands fa-youtube fa-2x" href="https://youtube.com" title="YouTube"
