Agregando prueba de Login fallida

--- a/public/carrito.html
+++ b/public/carrito.html
@@ -135,5 +135,6 @@
 
     <script src="./assets/js/carrito.js"></script>
     <script src="./assets/js/busqueda.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
