Login de Regirstro de usuario funcional

--- a/public/Login2.html
+++ b/public/Login2.html
@@ -10,7 +10,6 @@
   <div class="container">
     <h2>Iniciar Sesión</h2>
     <form id="loginForm">
-      <input type="text" id="username" placeholder="Nombre de usuario" required/>
     <input type="email" id="email" placeholder="Correo electrónico" required />
     <input type="password" id="password" placeholder="Contraseña" required />
     <button type="submit">Ingresar</button>
@@ -26,7 +25,7 @@
 
     <div id="mensaje"></div>
   </div>
-   <script src="/assets/js/login2.js"></script>
+   <script src="/assets/js/login.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
